tests/invalid/default_parameter_type_mismatch.wio
fn Bad(x: i32 = "oops") -> i32 {
    return x;
}

fn Entry() -> i32 {
    return Bad();
}
